WIP in selecting best symbols

--- a/correlation_edit.ipynb
+++ b/correlation_edit.ipynb
@@ -1723,10 +1723,38 @@
    "cell_type": "code",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USDCUSDT\n",
+      "1000XECUSDT\n",
+      "IDEXUSDT\n",
+      "OPUSDT\n",
+      "KNCUSDT\n",
+      "EDUUSDT\n",
+      "MKRUSDT\n",
+      "XVGUSDT\n",
+      "UNFIUSDT\n",
+      "SUIUSDT\n",
+      "ANTUSDT\n",
+      "HFTUSDT\n",
+      "TOMOUSDT\n",
+      "IDUSDT\n",
+      "BCHUSDT\n",
+      "FOOTBALLUSDT\n",
+      "TRXUSDT\n",
+      "LUNA2USDT\n",
+      "BNXUSDT\n",
+      "SFPUSDT\n",
+      "CFXUSDT\n",
+      "XLMUSDT\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": "['USDCUSDT',\n '1000XECUSDT',\n 'IDEXUSDT',\n 'OPUSDT',\n 'KNCUSDT',\n 'EDUUSDT',\n 'MKRUSDT',\n 'XVGUSDT',\n 'UNFIUSDT',\n 'SUIUSDT',\n 'ANTUSDT',\n 'HFTUSDT',\n 'TOMOUSDT',\n 'IDUSDT',\n 'BCHUSDT',\n 'FOOTBALLUSDT',\n 'TRXUSDT',\n 'LUNA2USDT',\n 'BNXUSDT',\n 'SFPUSDT',\n 'CFXUSDT',\n 'XLMUSDT']"
      },
-     "execution_count": 195,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,13 +1766,14 @@
     "pair_list.extend([price_corr_mod.index[arg_row_max], price_corr_mod.columns[arg_col_max]])\n",
     "\n",
     "aux_ind = np.arange(len(price_corr_mod.index))\n",
-    "\n",
+    "print(\"\\n\".join(pair_list))\n",
     "for i in range(20):\n",
     "    temp = price_corr_mod.loc[~price_corr_mod.index.isin(pair_list), pair_list].sum(1)\n",
     "    assert not any([c in temp.index for c in pair_list])\n",
     "    \n",
     "    new_sym = temp.index[np.argmax(temp)]\n",
     "    pair_list.append(new_sym)\n",
+    "    print(new_sym)\n",
     "\n",
     "\n",
     "pair_idx = [i for i, s in enumerate(price_corr_mod.index) if s in pair_list] \n",
@@ -1753,11 +1782,55 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-13T20:42:32.534167194Z",
-     "start_time": "2024-01-13T20:42:32.048424360Z"
+     "end_time": "2024-01-14T00:53:52.173108716Z",
+     "start_time": "2024-01-14T00:53:51.659931777Z"
     }
    },
-   "execution_count": 195
+   "execution_count": 204
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USDCUSDT: ''\n",
+      "1000XECUSDT: ''\n",
+      "IDEXUSDT: ''\n",
+      "OPUSDT: ''\n",
+      "KNCUSDT: ''\n",
+      "EDUUSDT: ''\n",
+      "MKRUSDT: ''\n",
+      "XVGUSDT: ''\n",
+      "UNFIUSDT: ''\n",
+      "SUIUSDT: ''\n",
+      "ANTUSDT: ''\n",
+      "HFTUSDT: ''\n",
+      "TOMOUSDT: ''\n",
+      "IDUSDT: ''\n",
+      "BCHUSDT: ''\n",
+      "FOOTBALLUSDT: ''\n",
+      "TRXUSDT: ''\n",
+      "LUNA2USDT: ''\n",
+      "BNXUSDT: ''\n",
+      "SFPUSDT: ''\n",
+      "CFXUSDT: ''\n",
+      "XLMUSDT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\": ''\\n\".join(pair_list))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-14T00:48:11.022493110Z",
+     "start_time": "2024-01-14T00:48:10.523243898Z"
+    }
+   },
+   "execution_count": 203
   },
   {
    "cell_type": "code",
@@ -1766,7 +1839,7 @@
      "data": {
       "text/plain": "[0,\n 11,\n 27,\n 33,\n 38,\n 58,\n 69,\n 79,\n 85,\n 86,\n 97,\n 108,\n 116,\n 126,\n 144,\n 154,\n 159,\n 162,\n 164,\n 166,\n 171,\n 175]"
      },
-     "execution_count": 196,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,11 +1850,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-13T20:43:22.249958147Z",
-     "start_time": "2024-01-13T20:43:21.706271611Z"
+     "end_time": "2024-01-14T00:47:19.062704507Z",
+     "start_time": "2024-01-14T00:47:18.411559554Z"
     }
    },
-   "execution_count": 196
+   "execution_count": 201
   },
   {
    "cell_type": "markdown",
