--- a/correlation_edit.ipynb
+++ b/correlation_edit.ipynb
@@ -1578,7 +1578,19 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mitertools\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m combinations\n\u001B[1;32m      3\u001B[0m force_compute \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[43mos\u001B[49m\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39misfile(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./price_corr.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39misfile(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./vix_corr.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m force_compute:\n\u001B[1;32m      5\u001B[0m     symbols_df \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlist\u001B[39m(data_df\u001B[38;5;241m.\u001B[39mkeys())\n\u001B[1;32m      6\u001B[0m     price_corr \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame(columns\u001B[38;5;241m=\u001B[39msymbols_df, index\u001B[38;5;241m=\u001B[39msymbols_df)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from itertools import combinations\n",
     "\n",
@@ -1619,11 +1631,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T19:48:24.070100280Z",
-     "start_time": "2024-01-12T19:36:48.199302843Z"
+     "end_time": "2024-01-14T01:30:30.722556532Z",
+     "start_time": "2024-01-14T01:30:30.558951174Z"
     }
    },
-   "execution_count": 83
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -1649,6 +1661,33 @@
     }
    },
    "execution_count": 115
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'overlap_mask' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43moverlap_mask\u001B[49m \u001B[38;5;241m<\u001B[39m \u001B[38;5;241m0.4\u001B[39m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'overlap_mask' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "overlap_mask < 0.4"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-14T01:30:18.899069947Z",
+     "start_time": "2024-01-14T01:30:15.714299205Z"
+    }
+   },
+   "execution_count": 1
   },
   {
    "cell_type": "code",
